src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/noReturn.deca
//Description
//  test d'une méthode devant retourner un int mais ne return rien
//
//Résultat
//  Erreur contextuelle ligne 9
//  La méthode doit renvoyer un int

class A{
    int inutile(int x){}
}